@@ -43,6 +43,7 @@ class LuaUnsyncedRead {
 		static int GetUnitNoMinimap(lua_State* L);
 		static int GetUnitNoSelect(lua_State* L);
 		static int GetFeatureLuaDraw(lua_State* L);
+		static int GetFeatureNoDraw(lua_State* L);
 
 		static int GetUnitTransformMatrix(lua_State* L);
 		static int GetUnitViewPosition(lua_State* L);
